<resources>
    <string name="app_name">UberApp_Tim22</string>

    <!-- button -->
    <string name="login_activity_button">Login Activity</string>
    <string name="passenger_inbox_activity_button">Passenger Inbox Activity</string>
    <string name="passenger_account_activity_button">Passenger Account Activity</string>
    <string name="login_button">LOGIN</string>
    <string name="registration_button">Registration</string>
    <string name="register_button">Sign Up</string>
    <string name="favorite_locations">Favorite locations</string>
    <string name="finished_ride">Ride is finished</string>
    <string name="panic">Panic</string>
    <string name="message_d">Message driver</string>
    <string name="acceptance_ride">Acceptance ride</string>
    <string name="current_ride">Current ride</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="find_available_driver">Find available driver</string>

    <!-- toggle button -->
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <!-- radio button -->
    <string name="now">Now</string>
    <string name="choose_date">Choose date</string>

    <!-- edit text -->
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Lastname</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <!-- text view -->
    <string name="login_input">Enter your username and password</string>
    <string name="signup_input">Enter your personal information</string>
    <string name="signup">Sign Up</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="duration">Duration</string>
    <string name="price">Price</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="details">Details</string>
    <string name="info_p">Passenger\'s info</string>
    <string name="info_d">Driver\'s info</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="car_type">Car type</string>
    <string name="pets">Pets allowed</string>
    <string name="babies">Babies allowed</string>
    <string name="my_profile">My profile</string>
    <string name="select_time">Select time:</string>
    <string name="no_available_driver">Sorry, there is no available driver.</string>
    <string name="show_route">Show route</string>
    <string name="select_vehicle_type">Select vehicle type:</string>
    <string name="fill_form">Please, fill the form to find your route!</string>


    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="choose_acc_type">Choose Account Type</string>
    <string name="hello">Hello!</string>
    <string name="fill_form2">Please fill out the form bellow to get started</string>
    <string name="no_acc">No account?</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- toolbar -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>

    <!-- menu item -->
    <string name="driver_main_activity">Home</string>
    <string name="driver_account_activity">Account</string>
    <string name="driver_inbox_activity">Inbox</string>
    <string name="driver_ride_history_activity">Ride history</string>

    <string name="main">Main</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="ride_history">Ride history</string>
    <string name="signout">Sign Out</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>

    <string name="profile">Profile</string>
    <string name="reports">Reports</string>
    <string name="favorite_rides">Favorite rides</string>
    <string name="title_activity_proba">ProbaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Vezbe08 -->
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="cancel_item">Cancel</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="places">Places</string>
    <string name="error">Error</string>
    <string name="set_as_main">Set as main</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="view_profile">View Profile</string>
    <string name="second_activity">SECOND ACTIVITY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="autosync_problem">Automatic Sync problem</string>
    <string name="no_internet">Bad news, no internet connection</string>
    <string name="autosync_warning">Automatic Sync warning</string>
    <string name="connect_to_wifi">Please connect to wifi to sync data</string>
    <string name="autosync">Automatic Sync</string>
    <string name="good_news_sync">Good news, everything is sync now.</string>
    <string name="new_comments">New comments</string>
    <string name="new_">New</string>
    <string name="turn_wifi_on">Turn wifi on</string>
    <string name="title_activity_maps">Maps drawing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guest_reservation_screen">GuestReservationScreen</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>