<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:title="@string/account"
        app:showAsAction="never" />
    <item
        android:id="@+id/item6"
        android:title="Accomodations"
        app:showAsAction="never" />
    <item
        android:id="@+id/item7"
        android:title="Reservations"
        app:showAsAction="never" />
    <item
        android:id="@+id/item8"
        android:title="Notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/item4"
        android:title="@string/main"
        app:showAsAction="never" />
    <item
        android:id="@+id/item5"
        android:title="@string/signout"
        app:showAsAction="never" />


</menu>